--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,13 +1,26 @@
+.user_profile_container {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  align-items: center;
+}
 .username {
+  font-weight: bold;
 }
-.tag {
-}
-.location {
+.location_wrapper {
+  display: flex;
+  column-gap: 5px;
+  align-items: center;
 }
 .avatar {
+  margin-top: 15px;
   border-radius: 50%;
   overflow: hidden;
 }
 .stats_list {
   display: flex;
+  text-align: center;
+  list-style-type: none;
+  padding: 0;
+  column-gap: 15px;
 }
