--- a/src/components/Profile/Profile_list_item/Profile_list_item.module.css
+++ b/src/components/Profile/Profile_list_item/Profile_list_item.module.css
@@ -1,7 +1,16 @@
 .stats_list_item {
+  display: flex;
   flex-direction: column;
+  row-gap: 5px;
+}
+.stats_list_item_title,
+.stats_list_item_value {
+  margin: 0;
 }
 .stats_list_item_title {
+  font-style: italic;
+  font-weight: 500;
 }
 .stats_list_item_value {
+  font-weight: bold;
 }
