--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -12,12 +12,18 @@
 .stat_list {
   display: flex;
   text-align: center;
+  justify-content: center;
+
   list-style-type: none;
   padding: 0;
 }
 .item {
   display: flex;
   flex-direction: column;
+  width: 100px;
+  height: 100px;
+  border: 1px solid black;
+  border-radius: 5px;
 }
 .label {
   font-style: italic;
