--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -12,16 +12,16 @@
 .stat_list {
   display: flex;
   text-align: center;
-  justify-content: center;
-
+  column-gap: 5px;
   list-style-type: none;
   padding: 0;
 }
 .item {
   display: flex;
   flex-direction: column;
-  width: 100px;
-  height: 100px;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
   border: 1px solid black;
   border-radius: 5px;
 }
