--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,4 +1,7 @@
-.task_wrapper:after {
+.task_wrapper {
+  margin: 15px auto;
+}
+.task_wrapper:not(:last-child):after {
   display: block;
   content: '';
   position: absolute;
@@ -8,7 +11,6 @@
   height: 2px;
   background-color: rgb(196, 196, 223);
 }
-
 .task_title {
   text-align: center;
 }
